# project_LLM

./: .gitignore  README.md  pyproject.toml
src/: fetcher.py  main.py
